--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 matrix:
   include:
     - os: osx
-      language: generic
-      # Xcode version implicitly defines the Swift version to be used on macOS.
+      language: objective-c
       osx_image: xcode8.2
-
+    - os: osx
+      language: objective-c
+      osx_image: xcode8.3
     - os: linux
       language: generic
       sudo: required
@@ -12,7 +13,7 @@ matrix:
         - docker
       env:
         # The Docker image to use on Linux in Docker notation,
-        # e.g. "swift" or "myusername/myswift" or "swift:3.0.2".
+        # e.g. "swift" or "myusername/myswift" or "swift:3.1".
         # The image must have Swift installed so that the `swift`
         # command is in the `$PATH`.
         #
@@ -21,8 +22,15 @@ matrix:
         # is simply "swift".
         #
         # You can use tags to select a specific Swift version if the
-        # image supports it, e.g. "swift:3.0.2" or "swift:latest".
-        DOCKER_IMAGE="swift:3.0.2"
+        # image supports this, e.g. "swift:3.0.2" or "swift:latest".
+        - DOCKER_IMAGE="swift:3.0"
+    - os: linux
+      language: generic
+      sudo: required
+      services:
+        - docker
+      env:
+        - DOCKER_IMAGE="swift:3.1"
 
 script:
   - chmod ugo+x ./scripts/travis-build-script.sh
