--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,14 @@ matrix:
         # image supports it, e.g. "swift:3.0.2" or "swift:latest".
         DOCKER_IMAGE="swift:3.1"
 
+    - os: linux
+      language: generic
+      sudo: required
+      services:
+        - docker
+      env:
+        DOCKER_IMAGE="swift:4.0"
+
 script:
   - chmod ugo+x ./scripts/travis-build-script.sh
   - ./scripts/travis-build-script.sh
