Update Xcode project; exclude performance tests from standard test run
I excluded the performance tests from the default test run (Cmd+U) to shorten the time it takes for the tests to run. To run the performance tests, use the "Performance-Tests-macOS" scheme.

--- a/SortedArray.xcodeproj/xcshareddata/xcschemes/Performance-Tests-macOS.xcscheme
+++ b/SortedArray.xcodeproj/xcshareddata/xcschemes/Performance-Tests-macOS.xcscheme
@@ -30,7 +30,8 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "DD7502791C68FCFC006590AF"
