--- a/SortedArray.xcodeproj/xcshareddata/xcschemes/SortedArray-iOS.xcscheme
+++ b/SortedArray.xcodeproj/xcshareddata/xcschemes/SortedArray-iOS.xcscheme
@@ -30,7 +30,9 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            parallelizable = "YES"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "52D6D9851BEFF229002C0205"
@@ -38,6 +40,11 @@
                BlueprintName = "SortedArray-iOS Tests"
                ReferencedContainer = "container:SortedArray.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "PerformanceTests">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <MacroExpansion>
