--- a/SortedArray.xcodeproj/xcshareddata/xcschemes/SortedArray-tvOS.xcscheme
+++ b/SortedArray.xcodeproj/xcshareddata/xcschemes/SortedArray-tvOS.xcscheme
@@ -30,7 +30,9 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            parallelizable = "YES"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "DD75028C1C690C7A006590AF"
@@ -38,6 +40,11 @@
                BlueprintName = "SortedArray-tvOS Tests"
                ReferencedContainer = "container:SortedArray.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "PerformanceTests">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <MacroExpansion>
